--- a/webcode/about/contact.html
+++ b/webcode/about/contact.html
@@ -2,16 +2,13 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="../style.css">
-		<title>About us</title>
+		<title>Contact us</title>
 		<meta charset = "UTF-8">
 	</head>
 
 	<body>
-		<h1>About us</h1>
-		<p> We are the best movie rental company i the whole world</p>
-
-
-
+		<h1>Contact us</h1>
+		<p> You don't need to contact us. We know that our product is perfect</p>
 
 
 	</body>
