--- a/webcode/faq/faq.html
+++ b/webcode/faq/faq.html
@@ -2,13 +2,15 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="../style.css">
-		<title>About us</title>
+		<title>FAQ</title>
 		<meta charset = "UTF-8">
 	</head>
 
 	<body>
-		<h1>About us</h1>
-		<p> We are the best movie rental company i the whole world</p>
+		<h1>Frequently asked questions</h1>
+		<p>Q: Are you a noob</p>
+		</br>
+		<p>A: Yes</p>
 
 
 
