--- a/webcode/terms/terms.html
+++ b/webcode/terms/terms.html
@@ -2,13 +2,14 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="../style.css">
-		<title>About us</title>
+		<title>Terms of Use</title>
 		<meta charset = "UTF-8">
 	</head>
 
 	<body>
-		<h1>About us</h1>
-		<p> We are the best movie rental company i the whole world</p>
+
+		<h1>Terms of Use</h1>
+		<p>Remember to inject420 the movie after use</p>
 
 
 
