fixed link to style

--- a/webcode/index.html
+++ b/webcode/index.html
@@ -9,7 +9,7 @@ and open the template in the editor.
         <title>Muvi</title>
         <meta charset="windows-1252">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="style2.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
         
         <script>
