--- a/webcode/faq/index.html
+++ b/webcode/faq/index.html
@@ -22,6 +22,18 @@
                 <summary>How do I rent movies from Muvi?</summary>
                 <p>Find your movie of choice and click on the 'Rent movie' button.</p>
             </details>
+            <details>
+                <summary>Can I browse movies based on a specific category?</summary>
+                <p>Yes! Go to <a href="../movies/">movies</a> and click on categories. Then select your desired category/genre.</p>
+            </details>
+            <details>
+                <summary>What payment options are available?</summary>
+                <p>We currently accept payments via PayPal and credit/debit cards.</p>
+            </details>
+            <details>
+                <summary>Are the movies shipped physically or streamed online?</summary>
+                <p>They are streamed online in 1080p quality. Some titles are even available in 3D!</p>
+            </details>
         </section>
         <footer></footer>
     </body>
