--- a/webcode/movies/index.html
+++ b/webcode/movies/index.html
@@ -76,10 +76,10 @@
             <header>Muvi</header>
         <nav id="navbar">
             <ul id="the-menu">
-                <li id="link1"><a href=""><i class="fa fa-home"></i>Home</a></li>
+                <li id="link1"><a href="../"><i class="fa fa-home"></i>Home</a></li>
                 <li id="link2" class="selected"><a href=""><i class="fa fa-film"></i>Movies</a></li>
-                <li id="link3"><a href=""><i class="fa fa-info-circle"></i>About</a></li>
-                <li id="link4"><a href=""><i class="fa fa-question-circle"></i>FAQ</a></li>
+                <li id="link3"><a href="../about/"><i class="fa fa-info-circle"></i>About</a></li>
+                <li id="link4"><a href="../faq/"><i class="fa fa-question-circle"></i>FAQ</a></li>
             </ul>
         </nav>
             
