fixed scaling (height), some style, faq footer

--- a/webcode/about/index.html
+++ b/webcode/about/index.html
@@ -4,15 +4,16 @@
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<title>About us</title>
 		<meta charset = "UTF-8">
+                <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet">
 	</head>
 
 	<body>
 		<header>Muvi</header>
                 <nav id="navbar">
                     <ul id="the-menu">
-                        <li id="link1" class="selected"><a href="../"><i class="fa fa-home"></i>Home</a></li>
+                        <li id="link1"><a href="../"><i class="fa fa-home"></i>Home</a></li>
                         <li id="link2"><a href="../movies/"><i class="fa fa-film"></i>Movies</a></li>
-                        <li id="link3"><a href=""><i class="fa fa-info-circle"></i>About</a></li>
+                        <li id="link3"class="selected"><a href=""><i class="fa fa-info-circle"></i>About</a></li>
                         <li id="link4"><a href="../faq/"><i class="fa fa-question-circle"></i>FAQ</a></li>
                     </ul>
                 </nav>
@@ -26,7 +27,7 @@
 
                     <h2 class="welcome">Contact us</h2>
                     <p>You can contact us via these options:</p>
-                    <ul>
+                    <ul id="contactoptions">
                         <li><p>Phone: +47 11 22 33 44</p></li>
                         <li><p>Fax: +47 11 22 33 44</p></li>
                         <li><p>E-mail: support@muvi.com</p></li>
