--- a/webcode/faq/index.html
+++ b/webcode/faq/index.html
@@ -34,7 +34,7 @@
                 <summary>Are the movies shipped physically or streamed online?</summary>
                 <p>They are streamed online in 1080p quality. Some titles are even available in 3D!</p>
             </details>
+            <footer>Muvi is a web page for learning purposes only. Images and information about movies are all courtesy of IMDB.com</footer>
         </section>
-        <footer></footer>
     </body>
 </html>
