--- a/webcode/about/index.html
+++ b/webcode/about/index.html
@@ -33,7 +33,7 @@
                         <li><p>E-mail: support@muvi.com</p></li>
                     </ul>
                     
-                    <footer>Muvi is a web page for learning purposes only. Images and information about movies are all courtesy of IMDB.com</footer>
+                    <footer>Muvi is a web page for learning purposes only. Images and information about movies are all courtesy of IMDB.com. Thanks to FontAwesome for icons.</footer>
 
                 </section>
 
