--- a/webcode/movies/rent.html
+++ b/webcode/movies/rent.html
@@ -11,8 +11,8 @@
         
         <script>
         function successful(){
-            
-            window.open(cinema.html)
+            window.close("rent.html");
+            window.open("cinema.html");
         }
         </script>
     </head>
