Added <hr> lines to home and about

--- a/webcode/about/index.html
+++ b/webcode/about/index.html
@@ -20,17 +20,19 @@
 
                 <section id="main">
                     <h1 class="welcome">Who are we?</h1>
+                    <hr class="underline" />
                     <p>Muvi is a web page created for a project in IT2805. This web page aims to give you the pleasure of watching movies in high quality
                         and maintain its "easy to use" interface. Although you cannot really rent movies here at the moment, we do deliver valid information about
                         the movies we currently have in our system. Our goal is to beat every competitor in the field of online movies. We believe that we have the 
                         potential to beat them on price, quality and customer service.</p>
 
                     <h2 class="welcome">Contact us</h2>
+                    <hr class="underline" />
                     <p>You can contact us via these options:</p>
                     <ul id="contactoptions">
                         <li><p>Phone: +47 11 22 33 44</p></li>
                         <li><p>Fax: +47 11 22 33 44</p></li>
-                        <li><p>E-mail: support@muvi.com</p></li>
+                        <li><p>E-mail: muvisupport@mail.com</p></li>
                     </ul>
                     
                     <footer>Muvi is a web page for learning purposes only. Images and information about movies are all courtesy of IMDB.com. Thanks to FontAwesome for icons.</footer>
