--- a/webcode/movies/movie.html
+++ b/webcode/movies/movie.html
@@ -15,7 +15,7 @@
         <nav id="navbar">
             <ul id="the-menu">
                 <li id="link1"><a href="../"><i class="fa fa-home"></i>Home</a></li>
-                <li id="link2" class="selected"><a href=""><i class="fa fa-film"></i>Movies</a></li>
+                <li id="link2" class="selected"><a href="index.html"><i class="fa fa-film"></i>Movies</a></li>
                 <li id="link3"><a href="../about/"><i class="fa fa-info-circle"></i>About</a></li>
                 <li id="link4"><a href="../faq/"><i class="fa fa-question-circle"></i>FAQ</a></li>
             </ul>
@@ -25,6 +25,7 @@
             <form name="idContainer">
                 <input type="hidden" name="id">
             </form>
+            <section id="movie_info"></section>
             <footer>Muvi is a web page for learning purposes only. Images and information about movies are all courtesy of IMDB.com</footer>
         </section>
 	</body>
