Small fixes at faq and css

--- a/webcode/about/index.html
+++ b/webcode/about/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="../style.css">
-		<title>About us</title>
+		<title>Muvi - About us</title>
 		<meta charset = "UTF-8">
                 <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet">
 	</head>
@@ -26,13 +26,12 @@
                         the movies we currently have in our system. Our goal is to beat every competitor in the field of online movies. We believe that we have the 
                         potential to beat them on price, quality and customer service.</p>
 
-                    <h2 class="welcome">Contact us</h2>
+                    <h1 class="welcome">Contact us</h2>
                     <hr class="underline" />
-                    <p>You can contact us via these options:</p>
                     <ul id="contactoptions">
-                        <li><p>Phone: +47 11 22 33 44</p></li>
-                        <li><p>Fax: +47 11 22 33 44</p></li>
-                        <li><p>E-mail: muvisupport@mail.com</p></li>
+                        <li>Phone: +47 11 22 33 44</li>
+                        <li>Fax: +47 11 22 33 44</li>
+                        <li>E-mail: muvisupport@mail.com</li>
                     </ul>
                     
                     <footer>Muvi is a web page for learning purposes only. Images and information about movies are all courtesy of IMDB.com. Thanks to FontAwesome for icons.</footer>
