--- a/webcode/faq/index.html
+++ b/webcode/faq/index.html
@@ -8,7 +8,7 @@
 	<meta charset = "UTF-8">
     </head>
     <body>
-        <header>Frequently asked questions</header>
+        <header>Muvi</header>
         <nav id="navbar">
             <ul id="the-menu">
                 <li id="link1"><a href="../index.html"><i class="fa fa-home"></i> Home</a></li>
@@ -18,6 +18,8 @@
             </ul>
         </nav>
         <section id="main">
+            <h1 class="welcome">Frequently asked questions</h1>
+            <hr class="underline" />
             <details>
                 <summary>How do I rent movies from Muvi?</summary>
                 <p>Find your movie of choice and click on the 'Rent movie' button.</p>
@@ -34,6 +36,7 @@
                 <summary>Are the movies shipped physically or streamed online?</summary>
                 <p>They are streamed online in 1080p quality. Some titles are even available in 3D!</p>
             </details>
+            <p>If your question is not listed here, feel free to <a href="../about/">contact us</a> on our email, phone or fax.</p>
             <footer>Muvi is a web page for learning purposes only. Images and information about movies are all courtesy of IMDB.com. Thanks to FontAwesome for icons. </footer>
         </section>
     </body>
