--- a/webcode/movies/index.html
+++ b/webcode/movies/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="../style.css">
         <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet">
         <script src="movies.js"></script>
-	<title>Movies</title>
+	<title>Muvi - Movies</title>
 	<meta charset = "UTF-8">
         <script type="text/javascript">
             window.addEventListener("load", init);            
