--- a/webcode/movies/rent.html
+++ b/webcode/movies/rent.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="../style.css">
         <link rel="stylesheet" type="text/css" href="../css/form_style.css">
-        <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+        <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet">
         
         <script>
         function successful(){
