Added display for all info and styled movie.html

--- a/webcode/movies/movie.html
+++ b/webcode/movies/movie.html
@@ -2,6 +2,7 @@
 <html>
     <head>
 	<link rel="stylesheet" type="text/css" href="../style.css">
+        <link rel="stylesheet" type="text/css" href="../css/movie_style.css">
         <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet">
         <meta charset = "UTF-8">
         <script src="movies.js"></script>
@@ -25,7 +26,10 @@
             <form name="idContainer">
                 <input type="hidden" name="id">
             </form>
-            <section id="movie_info"></section>
+            <div id="movie_info">
+                
+            </div>
+            <iframe id="movie_trailer" width="640" height="390" seamless></iframe>
             <footer>Muvi is a web page for learning purposes only. Images and information about movies are all courtesy of IMDB.com</footer>
         </section>
 	</body>
