Added links to movies/index

--- a/webcode/movies/index.html
+++ b/webcode/movies/index.html
@@ -54,6 +54,7 @@
             
         <section id="main_movies">
             <h1 id="movie_header">Movies</h1>
+            <p><a href="categories.html" >Categories</a>   |   <a href="toprated.html">Top rated</a>   |   <a href="mostviewed.html">Most viewed</a></p>
             <hr /> 
             <table cellspacing="20">
                 <tbody id="the_movies">
