--- a/webcode/movies/rent.html
+++ b/webcode/movies/rent.html
@@ -44,9 +44,9 @@
                    <p>Phone: <input type="tel" name="phone" size="30" maxLength="100"/></p>
                    <input type="submit" name="submit" align="center" />
                 </form> 
+            <footer>Muvi is a web page for learning purposes only. Images and information about movies are all courtesy of IMDB.com. Thanks to FontAwesome for icons.</footer>
             
         </section>
         
-        <footer></footer>
     </body>
 </html>
