Added search-function and refactored movies.js

--- a/webcode/movies/search.html
+++ b/webcode/movies/search.html
@@ -8,7 +8,7 @@
 	<title>Muvi - Movies</title>
 	<meta charset = "UTF-8">
         <script type="text/javascript">
-            window.addEventListener("load", init);
+            window.addEventListener("load", initSearchPage);
         </script>        
     </head>
     <body>
