Added toprated,mostviewed + fixed some links

--- a/webcode/movies/movie.html
+++ b/webcode/movies/movie.html
@@ -16,7 +16,7 @@
         <nav id="navbar">
             <ul id="the-menu">
                 <li id="link1"><a href="../"><i class="fa fa-home"></i>Home</a></li>
-                <li id="link2" class="selected"><a href="index.html"><i class="fa fa-film"></i>Movies</a></li>
+                <li id="link2" class="selected"><a href="../movies/"><i class="fa fa-film"></i>Movies</a></li>
                 <li id="link3"><a href="../about/"><i class="fa fa-info-circle"></i>About</a></li>
                 <li id="link4"><a href="../faq/"><i class="fa fa-question-circle"></i>FAQ</a></li>
             </ul>
@@ -30,7 +30,7 @@
                 
             </div>
             <iframe id="movie_trailer" width="640" height="390" seamless></iframe>
-            <footer>Muvi is a web page for learning purposes only. Images and information about movies are all courtesy of IMDB.com</footer>
+            <footer>Muvi is a web page for learning purposes only. Images and information about movies are all courtesy of IMDB.com. Thanks to FontAwesome for icons.</footer>
         </section>
 	</body>
 
