Some css fix (cursor) + latest.html

--- a/webcode/movies/index.html
+++ b/webcode/movies/index.html
@@ -24,7 +24,7 @@
             
         <section id="main_movies">
             <h1 id="movie_header">Movies</h1>
-            <p><a href="categories.html" >Categories</a>   |   <a href="toprated.html">Top rated</a>   |   <a href="mostviewed.html">Most viewed</a></p>
+            <p><a href="categories.html" >Categories</a>   |   <a href="toprated.html">Top rated</a>   |   <a href="mostviewed.html">Most viewed</a>   |   <a href="latest.html">Latest</a></p>
             <div id="searchBox">
                 <form action="search.html" method="GET">
                     <input type="text" name="query" placeholder="Search for title(s)..." />
