--- a/webcode/faq/index.html
+++ b/webcode/faq/index.html
@@ -36,6 +36,10 @@
                 <summary>Are the movies shipped physically or streamed online?</summary>
                 <p>They are streamed online in 1080p quality. Some titles are even available in 3D!</p>
             </details>
+            <details>
+                <summary> Can i get an overview of the site?</summary>
+                <p>We have a site map, and it can be found <a href="sitemap.html">here.</a></p>
+            </details>
             <p>If your question is not listed here, feel free to <a href="../about/">contact us</a> on our email, phone or fax.</p>
             <footer>Muvi is a web page for learning purposes only. Images and information about movies are all courtesy of IMDB.com. Thanks to FontAwesome for icons. </footer>
         </section>
